# memoryTracer

./: ReadMe.txt  build.gradle.kts  log.txt  settings.gradle.kts
app/: build.gradle.kts
app/libs/: bytehook-debug.aar  hmileak-debug.aar  hprofanalyzer-debug.aar  log-debug.aar
app/src/androidTest/java/com/source/memorytracer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_java_leak_test.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
bytehook/: build.gradle
bytehook/src/main/cpp/: CMakeLists.txt  bh_jni.c  bh_recorder.c  hook.c
gradle/wrapper/: gradle-wrapper.properties
hmileak/: build.gradle.kts
hmileak/src/main/cpp/: CMakeLists.txt  hprof_strip.cpp  native_bridge.cpp
hmileak/src/main/cpp/include/: hprof_strip.h
hprofanalyzer/: build.gradle.kts
hprofanalyzer/src/main/: AndroidManifest.xml
hprofanalyzer/src/main/cpp/: CMakeLists.txt  hprof_dump.cpp  hprof_dump.h  native_bridge.cpp
hprofanalyzer/src/main/cpp/include/: macros.h
hprofanalyzer/src/main/cpp/include/linker/: elf_reader.h  elf_wrapper.h  mydlfcn.h
hprofanalyzer/src/main/cpp/linker/: elf_reader.cpp  map_util.hpp  mydlfcn.cpp
hprofanalyzer/src/main/cpp/lzma/: Threads.h
log/: build.gradle.kts
log/src/main/cpp/: CMakeLists.txt  loglib.cpp
nativeleak/: build.gradle.kts
nativeleak/src/main/cpp/: CMakeLists.txt  nativeleak.cpp
nativeleak/src/main/cpp/include/utils/: auto_time.h
(+63 files in other folders)
